# cpp-kafka

./: .clang-format  .gitignore  CMakeLists.txt  LEARNED.md  README.md  TODO.md  description.md
docs/: LEARNED.md  TODO.md
rw-client/: consumer.js  package.json  producer.js
src/broker/: concurrent_queue.h  connection_handler.cpp  connection_handler.h  connection_session.h  log_manager.cpp  log_manager.h  main.cpp  protocol_parser.cpp  protocol_parser.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  server.cpp  server.h  thread_pool.cpp  thread_pool.h  topic_state.cpp  topic_state.h  types.h
src/client/: client.cpp  client.h  connection.cpp  connection.h
src/common/: batch.cpp  batch.h  message.cpp  message.h  record.cpp  record.h  serialize.cpp  serialize.h  types.h
src/consumer/: main.cpp
src/producer/: main.cpp
tests/: test_batch.cpp  test_log_manager.cpp  test_message.cpp  test_record.cpp  test_serialize.cpp
tools/: dump_batch.cpp
